--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ const COLORS = {
     }
   }
   return out;
-}
+
 
   }
 
@@ -639,7 +639,7 @@ const COLORS = {
 const all = [...new Set([
   ...sets.permitted,
   ...sets.conditional,
-  ...sets.accessory,      // include accessory
+  ...sets.accessory      // include accessory
 
 ])];
 
